Add function for enabling GC logging for daemon